fix nomad provider
fix nomad provider

--- a/modules/load-balancer/sync.hcl.tmpl
+++ b/modules/load-balancer/sync.hcl.tmpl
@@ -1,7 +1,7 @@
 log_level = "info"
 
 consul {
-  address = "https://consul.exactsciences.net"
+  address = "http://localhost:8500"
 }
 
 buffer_period {
@@ -9,11 +9,11 @@ buffer_period {
   max = "20s"
 }
 
-{{range services}}{{ if .Tags | contains "consul-ingress-alb=${namespace}-${region}" }}
+{{range services}}{{ if .Tags | contains "consul-ingress-alb=${region}" }}
 service {
   name = "{{.Name}}"
-  tag = "consul-ingress-alb=${namespace}-${region}"
-  description = "all instances of the {{.Name}} service tagged with consul-ingress-alb=${namespace}-${region}"
+  tag = "consul-ingress-alb=${region}"
+  description = "all instances of the {{.Name}} service tagged with consul-ingress-alb=${region}"
 }
 {{end}}{{end}}
 
@@ -21,7 +21,7 @@ task {
   name = "consul-service-ingress-${region}"
   description = "automate load balancer synchronization"
   source = "/local/sync-module"
-  services = ["dummy", {{range services}}{{ if .Tags | contains "consul-ingress-alb=${namespace}-${region}" }}"{{.Name}}",{{end}}{{end}}]
+  services = ["dummy", {{range services}}{{ if .Tags | contains "consul-ingress-alb=${region}" }}"{{.Name}}",{{end}}{{end}}]
   buffer_period {
     min = "10s"
   }
@@ -32,9 +32,7 @@ driver "terraform" {
   persist_log = false
   working_dir = "/local/"
   path = "/local/"
-  backend "s3" {
-    bucket = "exact-sciences-terraform-states"
-    region = "us-east-1"
-    key = "nomad/consul-ingress-alb/${namespace}-${region}"
+  backend "consul" {
+    gzip = true
   }
 }
