--- a/modules/load-balancer/sync.hcl.tmpl
+++ b/modules/load-balancer/sync.hcl.tmpl
@@ -1,7 +1,7 @@
 log_level = "info"
 
 consul {
-  address = "https://consul.${var.domain}"
+  address = "https://consul.${domain}"
 }
 
 buffer_period {
